--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -52,7 +52,6 @@ jobs:
       run: |
         wget https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar -O BuildTools.jar
         mkdir -p output
-        cat /home/runner/work/_temp/*.sh
       working-directory: buildtool
         
     - name: Set up JDK 21
@@ -62,7 +61,7 @@ jobs:
         distribution: 'temurin'
         
     - name: Build Spigot version with Java 21
-      run: python -v
+      run: ./build.sh JAVA21
       working-directory: buildtool
       
     - name: Set up JDK 17
