--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -52,6 +52,8 @@ jobs:
       run: |
         wget https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar -O BuildTools.jar
         mkdir -p output
+        chmod +x ./build.sh
+        chmod +x ./generate_version_table.sh
       working-directory: buildtool
         
     - name: Set up JDK 21
