--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -81,18 +81,7 @@ jobs:
       run: ./build.sh JAVA8
       
     - name: Generate readme
-      run: ./generate_version_table.sh ${{ env.date }} README.md
-      
-    - name: Push builds to release branch
-      run: |
-        git init
-        git config user.name "github-actions"
-        git config user.email "41898282+github-actions@users.noreply.github.com"
-        git remote add origin "https://${{github.actor}}:${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}}"
-        git checkout -b release
-        git add README.md
-        git commit -m "${{ env.date }}"
-        git push -f origin release
+      run: ./generate_version_table.sh ${{ env.date }} output/README.md
       
     - name: Create Release
       uses: softprops/action-gh-release@v2
