--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -88,7 +88,7 @@ jobs:
       with:
         name: ${{ env.date }}
         tag_name: ${{ env.date }}
-        target_commitish: release
+        target_commitish: main
         files: output/*.jar
         body_path: output/README.md
         
