--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -2,7 +2,7 @@ name: Spigot Build
 
 on:
   schedule:
-    - cron: '0 0 */4 * *'
+    - cron: "0 0 */4 * *"
   workflow_dispatch:
 
 permissions:
@@ -10,105 +10,104 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-        
-    - name: Set environment variable
-      run: |
-        echo "date=$(date +%Y.%m.%d)" >> $GITHUB_ENV
-      
-    - name: Restore cache .m2 folder
-      uses: actions/cache/restore@v4
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-cache-maven-${{ env.date }}
-        restore-keys: ${{ runner.os }}-cache-maven-
-        
-    - name: Restore cache Spigot repos
-      uses: actions/cache/restore@v4
-      with:
-        path: |
-          apache-maven-*
-          Bukkit
-          CraftBukkit
-          Spigot
-        key: ${{ runner.os }}-cache-spigot-${{ env.date }}
-        restore-keys: ${{ runner.os }}-cache-spigot-
-        
-    - name: Restore cache build works
-      uses: actions/cache/restore@v4
-      with:
-        path: work
-        key: ${{ runner.os }}-cache-build-work-${{ env.date }}
-        restore-keys: ${{ runner.os }}-cache-build-work-
-        
-    - name: Set up BuildTool
-      run: |
-        wget https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar -O BuildTools.jar
-        mkdir -p output
-        chmod +x ./build.sh
-        chmod +x ./generate_version_table.sh
-        
-    - name: Set up JDK 21
-      uses: actions/setup-java@v4
-      with:
-        java-version: '21'
-        distribution: 'temurin'
-        
-    - name: Build Spigot version with Java 21
-      run: ./build.sh JAVA21
-      
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        
-    - name: Build Spigot version with Java 17
-      run: ./build.sh JAVA17
-      
-    - name: Set up JDK 8
-      uses: actions/setup-java@v4
-      with:
-        java-version: '8'
-        distribution: 'temurin'
-        
-    - name: Build Spigot version with Java 8
-      run: ./build.sh JAVA8
-      
-    - name: Generate readme
-      run: ./generate_version_table.sh ${{ env.date }} output/README.md
-      
-    - name: Create Release
-      uses: softprops/action-gh-release@v2
-      with:
-        name: ${{ env.date }}
-        tag_name: ${{ env.date }}
-        files: output/*.jar
-        body_path: output/README.md
-        
-    - name: Save cache .m2 folder
-      uses: actions/cache/save@v4
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-cache-maven-${{ env.date }}
-        
-    - name: Save cache Spigot repos
-      uses: actions/cache/save@v4
-      with:
-        path: |
-          apache-maven-*
-          Bukkit
-          CraftBukkit
-          Spigot
-        key: ${{ runner.os }}-cache-spigot-${{ env.date }}
-        
-    - name: Save cache build works
-      uses: actions/cache/save@v4
-      with:
-        path: work
-        key: ${{ runner.os }}-cache-build-work-${{ env.date }}
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set environment variable
+        run: |
+          echo "date=$(date +%Y.%m.%d)" >> $GITHUB_ENV
+
+      - name: Restore cache .m2 folder
+        uses: actions/cache/restore@v4
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-cache-maven-${{ env.date }}
+          restore-keys: ${{ runner.os }}-cache-maven-
+
+      - name: Restore cache Spigot repos
+        uses: actions/cache/restore@v4
+        with:
+          path: |
+            apache-maven-*
+            Bukkit
+            CraftBukkit
+            Spigot
+          key: ${{ runner.os }}-cache-spigot-${{ env.date }}
+          restore-keys: ${{ runner.os }}-cache-spigot-
+
+      - name: Restore cache build works
+        uses: actions/cache/restore@v4
+        with:
+          path: work
+          key: ${{ runner.os }}-cache-build-work-${{ env.date }}
+          restore-keys: ${{ runner.os }}-cache-build-work-
+
+      - name: Set up BuildTool
+        run: |
+          wget https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar -O BuildTools.jar
+          mkdir -p output
+          chmod +x ./build.sh
+          chmod +x ./generate_version_table.sh
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: "21"
+          distribution: "temurin"
+
+      - name: Build Spigot version with Java 21
+        run: ./build.sh JAVA21
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: "17"
+          distribution: "temurin"
+
+      - name: Build Spigot version with Java 17
+        run: ./build.sh JAVA17
+
+      - name: Set up JDK 8
+        uses: actions/setup-java@v4
+        with:
+          java-version: "8"
+          distribution: "temurin"
+
+      - name: Build Spigot version with Java 8
+        run: ./build.sh JAVA8
+
+      - name: Generate readme
+        run: ./generate_version_table.sh ${{ env.date }} output/README.md
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
+        with:
+          name: ${{ env.date }}
+          tag_name: ${{ env.date }}
+          files: output/*.jar
+          body_path: output/README.md
+
+      - name: Save cache .m2 folder
+        uses: actions/cache/save@v4
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-cache-maven-${{ env.date }}
+
+      - name: Save cache Spigot repos
+        uses: actions/cache/save@v4
+        with:
+          path: |
+            apache-maven-*
+            Bukkit
+            CraftBukkit
+            Spigot
+          key: ${{ runner.os }}-cache-spigot-${{ env.date }}
+
+      - name: Save cache build works
+        uses: actions/cache/save@v4
+        with:
+          path: work
+          key: ${{ runner.os }}-cache-build-work-${{ env.date }}
