--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -50,37 +50,34 @@ jobs:
           wget https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar -O BuildTools.jar
           mkdir -p output
           chmod +x ./build.sh
-          chmod +x ./generate_version_table.sh
 
       - name: Set up JDK 21
+        id: java21
         uses: actions/setup-java@v4
         with:
           java-version: "21"
           distribution: "temurin"
 
-      - name: Build Spigot version with Java 21
-        run: ./build.sh JAVA21
-
       - name: Set up JDK 17
+        id: java17
         uses: actions/setup-java@v4
         with:
           java-version: "17"
           distribution: "temurin"
 
-      - name: Build Spigot version with Java 17
-        run: ./build.sh JAVA17
-
       - name: Set up JDK 8
+        id: java8
         uses: actions/setup-java@v4
         with:
           java-version: "8"
           distribution: "temurin"
 
-      - name: Build Spigot version with Java 8
-        run: ./build.sh JAVA8
-
-      - name: Generate readme
-        run: ./generate_version_table.sh ${{ env.date }} output/README.md
+      - name: Build Spigot version
+        run: |
+          echo "JAVA_HOME_21=${{ steps.java21.outputs.java-home }}" >> $GITHUB_ENV
+          echo "JAVA_HOME_17=${{ steps.java17.outputs.java-home }}" >> $GITHUB_ENV
+          echo "JAVA_HOME_8=${{ steps.java8.outputs.java-home }}" >> $GITHUB_ENV
+          ./build.sh
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
