--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -2,7 +2,7 @@ name: Spigot Build
 
 on:
   schedule:
-    - cron: "0 0 */4 * *"
+    - cron: "0 0 */3 * *"
   workflow_dispatch:
 
 permissions:
@@ -11,14 +11,16 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java-version: [8, 17, 21]
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set environment variable
-        run: |
-          echo "date=$(date +%Y.%m.%d)" >> $GITHUB_ENV
+        run: echo "date=$(date +%Y.%m.%d)" >> $GITHUB_ENV
 
       - name: Restore cache .m2 folder
         uses: actions/cache/restore@v4
@@ -51,30 +53,15 @@ jobs:
           mkdir -p output
           chmod +x ./build.sh
 
-      - name: Set up JDK 21
-        id: java21
+      - name: Set up JDK
         uses: actions/setup-java@v4
         with:
-          java-version: "21"
-          distribution: "temurin"
-
-      - name: Set up JDK 17
-        id: java17
-        uses: actions/setup-java@v4
-        with:
-          java-version: "17"
-          distribution: "temurin"
-
-      - name: Set up JDK 8
-        id: java8
-        uses: actions/setup-java@v4
-        with:
-          java-version: "8"
+          java-version: ${{ matrix.java-version }}
           distribution: "temurin"
 
       - name: Build Spigot version
         run: |
-          ./build.sh
+          ./build.sh JAVA${{ matrix.java-version }}
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
