--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -2,18 +2,34 @@ name: Spigot Build
 
 on:
   schedule:
-    - cron: "0 0 */3 * *"
+    - cron: "0 0 */4 * *"
   workflow_dispatch:
 
 permissions:
   contents: write
 
 jobs:
+  get-versions:
+    runs-on: ubuntu-latest
+    outputs:
+      versions: ${{ steps.get-versions.outputs.versions }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Fetch versions
+        id: get-versions
+        run: |
+          versions=$(bash build.sh)
+          echo "versions=${versions}" >> $GITHUB_ENV
+          echo "::set-output name=versions::${versions}"
+
   build:
     runs-on: ubuntu-latest
+    needs: get-versions
     strategy:
       matrix:
-        java-version: [8, 17, 21]
+        version: ${{ fromJson(needs.get-versions.outputs.versions) }}
 
     steps:
       - name: Checkout repository
@@ -54,14 +70,23 @@ jobs:
           chmod +x ./build.sh
 
       - name: Set up JDK
-        uses: actions/setup-java@v4
-        with:
-          java-version: ${{ matrix.java-version }}
-          distribution: "temurin"
+        run: |
+          classification=$(echo "${{ matrix.version }}" | awk -F: '{print $2}')
+          if [[ "$classification" == "JAVA8" ]]; then
+            echo "Using JDK 8"
+            echo "JAVA_HOME=/path/to/jdk8" >> $GITHUB_ENV
+          elif [[ "$classification" == "JAVA17" ]]; then
+            echo "Using JDK 17"
+            echo "JAVA_HOME=/path/to/jdk17" >> $GITHUB_ENV
+          elif [[ "$classification" == "JAVA21" ]]; then
+            echo "Using JDK 21"
+            echo "JAVA_HOME=/path/to/jdk21" >> $GITHUB_ENV
+          fi
 
       - name: Build Spigot version
         run: |
-          ./build.sh JAVA${{ matrix.java-version }}
+          version=$(echo "${{ matrix.version }}" | awk -F: '{print $1}')
+          ./build.sh "$version"
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
