--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Fetch versions
         id: get-versions
         run: |
-          versions=$(bash build.sh)
+          versions=$(curl -L -s https://joverse.us/spigot | grep -oP '(?<=href=")[^"]*' | grep -E '^[0-9]+\.[0-9]+(\.[0-9]+)?' | grep -v '-' | sed 's/.json//' | sort -V)
           echo "versions=${versions}" >> $GITHUB_ENV
 
   build:
