--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           versions=$(curl -L -s https://joverse.us/spigot | grep -oP '(?<=href=")[^"]*' | grep -E '^[0-9]+\.[0-9]+(\.[0-9]+)?' | grep -v '-' | sed 's/.json//' | sort -V | paste -sd ',')
           echo "$version"
+          echo "none"
           echo "versions=${versions}" >> $GITHUB_ENV
 
   build:
