--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -21,14 +21,14 @@ jobs:
         id: get-versions
         run: |
           versions=$(curl -L -s https://joverse.us/spigot | grep -oP '(?<=href=")[^"]*' | grep -E '^[0-9]+\.[0-9]+(\.[0-9]+)?' | grep -v '-' | sed 's/.json//' | sort -V | paste -sd ',')
-          echo "versions=${versions}" >> $GITHUB_ENV
+          echo "::set-output name=versions::${versions}"
 
   build:
     runs-on: ubuntu-latest
     needs: get-versions
     strategy:
       matrix:
-        version: [ env.versions ]
+        version: ${{ fromJson(needs.get-versions.outputs.versions) }}
 
     steps:
       - name: Checkout repository
