--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -29,7 +29,7 @@ jobs:
     needs: get-versions
     strategy:
       matrix:
-        version: ${{ fromJson(needs.get-versions.outputs.versions) }}
+        version: [ 1.20.1, 1.8, 1.17]
 
     steps:
       - name: Checkout repository
