--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -24,12 +24,15 @@ jobs:
           versions=${versions%,} # Loại bỏ dấu phẩy ở cuối
           echo "::set-output name=versions::[${versions}]"
 
+      - name: Set environment variable
+        run: echo ${{ fromJson(needs.get-versions.outputs.versions) }}
+
   build:
     runs-on: ubuntu-latest
     needs: get-versions
     strategy:
       matrix:
-        version: [ 1.20.1, 1.8, 1.17]
+        version: [ 1.20.1, 1.8, 1.17 ]
 
     steps:
       - name: Checkout repository
