--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -11,8 +11,6 @@ permissions:
 jobs:
   get-versions:
     runs-on: ubuntu-latest
-    outputs:
-      versions: ${{ steps.get-versions.outputs.versions }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -20,27 +18,43 @@ jobs:
       - name: Fetch versions
         id: get-versions
         run: |
-          versions=$(curl -L -s https://joverse.us/spigot | grep -oP '(?<=href=")[^"]*' | grep -E '^[0-9]+\.[0-9]+(\.[0-9]+)?' | grep -v '-' | sed 's/.json//' | sort -V | tr '\n' ',')
-          versions=${versions%,} # Loại bỏ dấu phẩy ở cuối
-          echo "::set-output name=versions::[${versions}]"
+          versions=$(curl -L -s https://joverse.us/spigot | grep -oP '(?<=href=")[^"]*' | grep -E '^[0-9]+\.[0-9]+(\.[0-9]+)?' | grep -v '-' | sed 's/.json//' | sort -V | paste -sd ',')
+          echo "versions=[${versions}]" >> $GITHUB_ENV
 
-      - name: Set environment variable
-        run: echo ${{ fromJson(needs.get-versions.outputs.versions) }}
+      - name: Generate README.md
+        run: |
+          chmod +x README.sh
+          ./README.sh
 
   build:
     runs-on: ubuntu-latest
     needs: get-versions
     strategy:
       matrix:
-        version: [ 1.20.1, 1.8, 1.17 ]
+        version: ${{ env.versions }}
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
 
       - name: Set environment variable
-        run: echo "date=$(date +%Y.%m.%d)" >> $GITHUB_ENV
-
+        run: |
+          echo "date=$(date +%Y.%m.%d)" >> $GITHUB_ENV
+          version="1.18.0"  # replace this with your actual version input
+          IFS='.' read -r major minor patch <<<"$version"
+      
+          if ((major == 1 && minor < 17)); then
+              echo "java=11" >> $GITHUB_ENV
+          elif ((major == 1 && minor >= 17 && minor < 20)); then
+              echo "java=17" >> $GITHUB_ENV
+          elif ((major == 1 && minor >= 20)); then
+              echo "java=21" >> $GITHUB_ENV
+          fi
+      
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          java-version: ${{ env.java }}
+          distribution: "temurin"
+      
       - name: Restore cache .m2 folder
         uses: actions/cache/restore@v4
         with:
@@ -72,16 +86,9 @@ jobs:
           mkdir -p output
           chmod +x ./build.sh
 
-      - name: Set up JDK
-        uses: actions/setup-java@v4
-        with:
-          java-version: ${{ fromJson(needs.get-versions.outputs.versions)[0] }}
-          distribution: "temurin"
-
       - name: Build Spigot version
         run: |
-          version=$(echo "${{ matrix.version }}" | awk -F: '{print $1}')
-          java -jar BuildTools.jar --rev "$version" --output-dir output
+          java -jar BuildTools.jar --rev "${{ matrix.version }}" --output-dir output
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
