--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Fetch versions
         id: get-versions
         run: |
-          versions=[$(curl -L -s https://joverse.us/spigot | grep -oP '(?<=href=")[^"]*' | grep -E '^[0-9]+\.[0-9]+(\.[0-9]+)?' | grep -v '-' | sed 's/.json//' | sort -V | paste -sd ',')]
+          versions=[1.10.2, 1.17.1, 1.20.2]
           echo "::set-output name=versions::${versions}"
 
       - name: Generate README.md
