--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -11,8 +11,6 @@ permissions:
 jobs:
   get-versions:
     runs-on: ubuntu-latest
-    outputs:
-      versions: ${{ steps.get-versions.outputs.versions }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -20,35 +18,41 @@ jobs:
       - name: Fetch versions
         id: get-versions
         run: |
-          versions="X"
-          echo "::set-output name=versions::${versions}"
+          versions="[ 1.17 ]"
+          echo "versions=${versions}" >> $GITHUB_OUTPUT
 
       - name: Generate README.md
         run: |
-          echo "date=$(date +%Y.%m.%d)" >> $GITHUB_ENV
+          echo "date=$(date +%Y.%m.%d)" >> $GITHUB_OUTPUT
+          echo "date=${{ needs.generate_readme.outputs.date}}" >> $GITHUB_ENV
           chmod +x README.sh
           ./README.sh
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
-            name: ${{ env.date }}
-            tag_name: ${{ env.date }}
-            body_path: README.md
+          name: ${{ env.date }}
+          tag_name: ${{ env.date }}
+          body_path: README.md
 
   build:
     runs-on: ubuntu-latest
     needs: get-versions
     strategy:
       matrix:
-        version: [1.10.2, 1.17.1, 1.20.2]
+        version: ${{ needs.generate_readme.outputs.versions}}
 
     steps:
-
       - name: Set environment variable
         run: |
+          echo "date=${{ needs.generate_readme.outputs.date}}" >> $GITHUB_ENV
+
+
+
+
+
           IFS='.' read -r major minor patch <<<"${{ matrix.version }}"
-      
+
           if ((major == 1 && minor < 17)); then
               echo "java=8" >> $GITHUB_ENV
           elif ((major == 1 && minor >= 17 && minor < 20)); then
@@ -56,13 +60,13 @@ jobs:
           elif ((major == 1 && minor >= 20)); then
               echo "java=21" >> $GITHUB_ENV
           fi
-      
+
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
           java-version: ${{ env.java }}
           distribution: "temurin"
-      
+
       - name: Restore cache .m2 folder
         uses: actions/cache/restore@v4
         with:
