--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -12,8 +12,9 @@ jobs:
   get-versions:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Set date build
+        run: |
+          echo "date=$(date +%Y.%m.%d)" >> $GITHUB_OUTPUT
 
       - name: Fetch versions
         id: get-versions
@@ -21,19 +22,6 @@ jobs:
           versions="[ 1.17 ]"
           echo "versions=${versions}" >> $GITHUB_OUTPUT
 
-      - name: Generate README.md
-        run: |
-          echo "date=$(date +%Y.%m.%d)" >> $GITHUB_OUTPUT
-          echo "date=${{ needs.generate_readme.outputs.date}}" >> $GITHUB_ENV
-          chmod +x README.sh
-          ./README.sh
-
-      - name: Create Release
-        uses: softprops/action-gh-release@v2
-        with:
-          name: ${{ env.date }}
-          tag_name: ${{ env.date }}
-          body_path: README.md
 
   build:
     runs-on: ubuntu-latest
@@ -46,10 +34,6 @@ jobs:
       - name: Set environment variable
         run: |
           echo "date=${{ needs.generate_readme.outputs.date}}" >> $GITHUB_ENV
-
-
-
-
 
           IFS='.' read -r major minor patch <<<"${{ matrix.version }}"
 
@@ -130,3 +114,22 @@ jobs:
         with:
           path: work
           key: ${{ runner.os }}-cache-build-work-${{ env.date }}
+
+  push-readme:
+    runs-on: ubuntu-latest
+    needs: get-versions
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Generate README.md
+        run: |
+          chmod +x README.sh
+          ./README.sh
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
+        with:
+          name: ${{ needs.generate_readme.outputs.date}}
+          tag_name: ${{ needs.generate_readme.outputs.date}}
+          body_path: README.md
