--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -13,15 +13,34 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set date build
+        id: set_date
         run: |
           echo "date=$(date +%Y.%m.%d)" >> $GITHUB_OUTPUT
 
       - name: Fetch versions
-        id: get-versions
+        id: get_versions
         run: |
           versions="[ 1.17 ]"
           echo "versions=${versions}" >> $GITHUB_OUTPUT
 
+  push-readme:
+    runs-on: ubuntu-latest
+    needs: get-versions
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Generate README.md
+        run: |
+          chmod +x README.sh
+          ./README.sh
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
+        with:
+          name: ${{ needs.get-versions.outputs.date }} # Sửa lại tên job ở đây
+          tag_name: ${{ needs.get-versions.outputs.date }} # Sửa lại tên job ở đây
+          body_path: README.md
 
   build:
     runs-on: ubuntu-latest
@@ -114,22 +133,3 @@ jobs:
         with:
           path: work
           key: ${{ runner.os }}-cache-build-work-${{ env.date }}
-
-  push-readme:
-    runs-on: ubuntu-latest
-    needs: get-versions
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Generate README.md
-        run: |
-          chmod +x README.sh
-          ./README.sh
-
-      - name: Create Release
-        uses: softprops/action-gh-release@v2
-        with:
-          name: ${{ needs.generate_readme.outputs.date}}
-          tag_name: ${{ needs.generate_readme.outputs.date}}
-          body_path: README.md
