--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Fetch versions
         id: get_versions
         run: |
-          versions="['1.20.4', '1.17']"
+          versions=$(curl -L -s https://joverse.us/spigot | grep -oP '(?<=href=")[^"]*' | grep -E '^[0-9]+\.[0-9]+(\.[0-9]+)?' | grep -v '-' | sed 's/.json//' | sort -V | awk '{printf "\"%s\", ", $0}' | sed 's/, $//' | awk '{print "[" $0 "]"}')
           echo "versions=$(jq -cr '@json' <<< "${versions}")" >> $GITHUB_OUTPUT
 
   push-readme:
