--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -25,8 +25,8 @@ jobs:
         id: get_versions
         run: |
           versions=$(curl -L -s https://joverse.us/spigot | grep -oP '(?<=href=")[^"]*' | grep -E '^[0-9]+\.[0-9]+(\.[0-9]+)?' | grep -v '-' | sed 's/.json//' | sort -V | awk '{printf "%s,", $0}' | sed 's/,$//')
+          version='["9.0.0", "11.0.0"]'
           echo "versions=${versions}" >> $GITHUB_OUTPUT
-
 
   push-readme:
     runs-on: ubuntu-latest
@@ -52,7 +52,7 @@ jobs:
     needs: get-versions
     strategy:
       matrix:
-        version: ${{ fromJson('[' + needs.get_versions.outputs.versions + ']') }}
+        version: ${{ fromJSON(needs.get-versions.outputs.versions) }}
 
     steps:
       - name: Set environment variable
