--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -25,7 +25,7 @@ jobs:
         id: get_versions
         run: |
           versions=$(curl -L -s https://joverse.us/spigot | grep -oP '(?<=href=")[^"]*' | grep -E '^[0-9]+\.[0-9]+(\.[0-9]+)?' | grep -v '-' | sed 's/.json//' | sort -V | awk '{printf "%s,", $0}' | sed 's/,$//')
-          version='["9.0.0", "11.0.0"]'
+          versions='["9.0.0", "11.0.0"]'
           echo "versions=${versions}" >> $GITHUB_OUTPUT
 
   push-readme:
