--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -24,8 +24,7 @@ jobs:
       - name: Fetch versions
         id: get_versions
         run: |
-          versions=$(curl -L -s https://joverse.us/spigot | grep -oP '(?<=href=")[^"]*' | grep -E '^[0-9]+\.[0-9]+(\.[0-9]+)?' | grep -v '-' | sed 's/.json//' | sort -V | awk '{printf "%s,", $0}' | sed 's/,$//')
-          versions='["9.0.0", "11.0.0"]'
+          versions=$(curl -L -s https://joverse.us/spigot | grep -oP '(?<=href=")[^"]*' | grep -E '^[0-9]+\.[0-9]+(\.[0-9]+)?' | sed 's/.json//' | sort -V | jq -R -s 'split("\n") | .[:-1]' | tr -d '\n')
           echo "versions=${versions}" >> $GITHUB_OUTPUT
 
   push-readme:
@@ -49,7 +48,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: get-versions
+    needs: push-readme
     strategy:
       matrix:
         version: ${{ fromJSON(needs.get-versions.outputs.versions) }}
