--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -25,7 +25,8 @@ jobs:
         id: get_versions
         run: |
           versions=$(curl -L -s https://joverse.us/spigot | grep -oP '(?<=href=")[^"]*' | grep -E '^[0-9]+\.[0-9]+(\.[0-9]+)?' | sed 's/.json//' | sort -V | jq -R -s 'split("\n") | .[:-1]' | tr -d '\n')
-          echo "versions=${versions}" >> $GITHUB_OUTPUT
+          echo "versions=$(jq -cr '@json' <<< "$versions")" >> $GITHUB_OUTPUT
+
 
   push-readme:
     runs-on: ubuntu-latest
