--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -39,6 +39,7 @@ jobs:
         run: |
           chmod +x README.sh
           ./README.sh
+          echo ${{ needs.get-versions.outputs.versions }}
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
