--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -52,7 +52,7 @@ jobs:
     needs: push-readme
     strategy:
       matrix:
-        version: ${{ fromJSON(needs.get-versions.outputs.versions) }}
+        version: ${{ needs.get-versions.outputs.versions }}
 
     steps:
       - name: Set environment variable
