--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Fetch versions
         id: get_versions
         run: |
-          versions=$(curl -L -s https://joverse.us/spigot | grep -oP '(?<=href=")[^"]*' | grep -E '^[0-9]+\.[0-9]+(\.[0-9]+)?' | sed 's/.json//' | sort -V | awk '{printf "'\''%s'\'', ", $0}' | sed 's/, $//; s/^/[/'\''/; s/$/'\''/]/')
+          versions='["9.0.0", "11.0.0"]'
           echo versions=${versions} >> $GITHUB_OUTPUT
 
   push-readme:
