--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Fetch versions
         id: get_versions
         run: |
-          versions=$(curl -L -s https://joverse.us/spigot | grep -oP '(?<=href=")[^"]*' | grep -E '^[0-9]+\.[0-9]+(\.[0-9]+)?' | sed 's/.json//' | sort -V | jq -R -s 'split("\n") | .[:-1]' | tr -d '\n')
+          versions=$(curl -L -s https://hub.spigotmc.org/versions/ | grep -oP '(?<=href=")[^"]*' | grep -E '^[0-9]+\.[0-9]+(\.[0-9]+)?' | sed 's/.json//' | sort -V | jq -R -s 'split("\n") | .[:-1]' | tr -d '\n')
           echo "versions=${versions}" >> $GITHUB_OUTPUT
 
   push-readme:
@@ -114,7 +114,6 @@ jobs:
           name: ${{ env.date }}
           tag_name: ${{ env.date }}
           files: output/*.jar
-          body_path: output/README.md
 
       - name: Save cache .m2 folder
         uses: actions/cache/save@v4
