--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -60,13 +60,8 @@ jobs:
 
           IFS='.' read -r major minor patch <<<"${{ matrix.version }}"
 
-          if ((major == 1 && minor < 17)); then
-              echo "java=8" >> $GITHUB_ENV
-          elif ((major == 1 && minor >= 17 && minor < 20)); then
-              echo "java=17" >> $GITHUB_ENV
-          elif ((major == 1 && minor >= 20)); then
-              echo "java=21" >> $GITHUB_ENV
-          fi
+          java=$(curl -L -s "https://hub.spigotmc.org/versions/1.17.json" | jq -r '.javaVersions[0]')
+          echo "java=$((java - 44))" >> $GITHUB_ENV
 
       - name: Set up JDK
         uses: actions/setup-java@v4
