let me fit that

--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -24,6 +24,8 @@ jobs:
 
   push-readme:
     runs-on: ubuntu-latest
+    outputs:
+      versions: ${{ needs.get-versions.outputs.versions }}
     needs: get-versions
     steps:
       - name: Checkout repository
