--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -16,20 +16,28 @@ jobs:
     outputs:
       versions: ${{ steps.get_versions.outputs.versions }}
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Fetch versions
         id: get_versions
         run: |
-          versions=$(curl -L -s "https://hub.spigotmc.org/versions/" | grep -oP '(?<=href=")[^"]*' | grep -E '^[0-9]+\.[0-9]+(\.[0-9]+)?' | grep -v '-' | sed 's/.json//' | sort -V | jq -R -s 'split("\n") | .[:-1]' | tr -d '\n')
-          echo "versions=${versions}" >> $GITHUB_OUTPUT
+          versions_raw=$(curl -L -s https://hub.spigotmc.org/versions/ | grep -oP '(?<=href=")[^"]*' | grep -E '^[0-9]+\.[0-9]+(\.[0-9]+)?' | grep -v '-' | sed 's/.json//' | sort -V -r)
 
-  push-readme:
-    runs-on: ubuntu-latest
-    outputs:
-      versions: ${{ needs.get-versions.outputs.versions }}
-    needs: get-versions
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+          builds=()
+          versions=()
+
+          for version in $versions_raw; do
+              build=$(curl -L -s "https://hub.spigotmc.org/versions/${version}.json" | jq -r '.name')
+
+              if [[ ! " ${builds[@]} " =~ " ${build} " ]]; then
+                  builds+=("$build")
+                  versions+=("$version")
+              fi
+          done
+
+          json_versions=$(printf '%s\n' "${versions[@]}" | jq -R . | jq -s .)
+          echo "versions=${json_versions}" >> $GITHUB_OUTPUT
 
       - name: Generate README.md
         run: |
@@ -45,10 +53,10 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: push-readme
+    needs: get-versions
     strategy:
       matrix:
-        version: ${{ fromJSON(needs.push-readme.outputs.versions) }}
+        version: ${{ fromJSON(needs.get-versions.outputs.versions) }}
 
     steps:
       - name: Set environment variable
