--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -32,7 +32,7 @@ jobs:
 
               if [[ ! " ${builds[@]} " =~ " ${build} " ]]; then
                   builds+=("$build")
-                  versions+=("$version")
+                  versions+="${version} "
               fi
           done
 
