--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -14,7 +14,7 @@ jobs:
   get-versions:
     runs-on: ubuntu-latest
     outputs:
-      versions: ${{ steps.get_versions.outputs.versions }}
+      versions: ${{ steps.get_versions.outputs.json_versions }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -32,11 +32,13 @@ jobs:
 
               if [[ ! " ${builds[@]} " =~ " ${build} " ]]; then
                   builds+=("$build")
-                  versions+="${version} "
+                  versions+=("$version")
               fi
           done
 
-          echo "versions=${versions}" >> $GITHUB_OUTPUT
+          json_versions=$(printf '%s\n' "${versions[@]}" | jq -R . | jq -s -c .)
+          echo "versions=${versions}" >> $GITHUB_ENV
+          echo "json_versions=${json_versions}" >> $GITHUB_OUTPUT
 
       - name: Generate README.md
         run: |
@@ -55,7 +57,7 @@ jobs:
     needs: get-versions
     strategy:
       matrix:
-        version: ${{ fromJSON(needs.get-versions.outputs.versions) }}
+        version: ${{ fromJSON(needs.get-versions.outputs.json_versions) }}
 
     steps:
       - name: Set environment variable
