--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -40,6 +40,9 @@ jobs:
           echo "versions=${versions}" >> $GITHUB_ENV
           echo "json_versions=${json_versions}" >> $GITHUB_OUTPUT
 
+          versions=$(curl -L -s "https://hub.spigotmc.org/versions/" | grep -oP '(?<=href=")[^"]*' | grep -E '^[0-9]+\.[0-9]+(\.[0-9]+)?' | grep -v '-' | sed 's/.json//' | sort -V | jq -R -s 'split("\n") | .[:-1]' | tr -d '\n')
+          echo "json_versions=${json_versions}" >> $GITHUB_OUTPUT
+
       - name: Generate README.md
         run: |
           chmod +x README.sh
