fix null matrix

--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -25,6 +25,7 @@ jobs:
           ./FETCH.sh
 
       - name: Upload README.md to release
+        if: needs.fetch_versions.outputs.versions_to_build_json != ''
         uses: softprops/action-gh-release@v2
         with:
           name: Spigot
@@ -32,6 +33,7 @@ jobs:
           body_path: README.md
 
       - name: Push builds to release branch
+        if: needs.fetch_versions.outputs.versions_to_build_json != ''
         run: |
           (echo -e "# Spigot Build\n\nThis project provides an automated build of Spigot Minecraft Server, scheduled to build every days.\n\nThe latest build is available in [release](https://github.com/doandat943/spigot-build/releases/latest).\n\n"; cat README.md) > temp_file && mv temp_file README.md
           git config user.name "github-actions"
@@ -43,6 +45,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: get-versions
+    if: needs.fetch_versions.outputs.versions_to_build_json != ''
     strategy:
       matrix:
         version: ${{ fromJSON(needs.fetch_versions.outputs.versions) }}
