--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -27,6 +27,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: get-versions
+    if: needs.get-versions.outputs.versions != ''
     strategy:
       matrix:
         version: ${{ fromJSON(needs.get-versions.outputs.versions) }}
@@ -66,10 +67,15 @@ jobs:
 
   readme:
     runs-on: ubuntu-latest
-    needs: get-versions
+    needs: build
     steps:
+      - name: Fetch versions to build and generate README.md
+        id: fetch_versions
+        run: |
+          chmod +x README.sh
+          ./README.sh
+
       - name: Upload README.md to release
-        if: needs.fetch_versions.outputs.versions_to_build_json != ''
         uses: softprops/action-gh-release@v2
         with:
           name: Spigot
@@ -77,11 +83,10 @@ jobs:
           body_path: README.md
 
       - name: Push builds to release branch
-        if: needs.fetch_versions.outputs.versions_to_build_json != ''
         run: |
           (echo -e "# Spigot Build\n\nThis project provides an automated build of Spigot Minecraft Server, scheduled to build every days.\n\nThe latest build is available in [release](https://github.com/doandat943/spigot-build/releases/latest).\n\n"; cat README.md) > temp_file && mv temp_file README.md
           git config user.name "github-actions"
           git config user.email "41898282+github-actions@users.noreply.github.com"
           git add README.md
-          git commit -m "Update ${{ env.date }} to latest build"
+          git commit -m "Update to latest build"
           git push
